--- a/index.html
+++ b/index.html
@@ -289,6 +289,6 @@
     <footer id="footer" class="bg-gray-900 text-white py-12"></footer>
 
     <!-- JavaScript -->
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
