Replace the official tailwindcss.com to localtailwindcss.js

--- a/cases/index.html
+++ b/cases/index.html
@@ -6,7 +6,7 @@
     <title>Кейсы и истории успеха | Центр юридической помощи «ГиД»</title>
     <meta name="description" content="Реальные кейсы и успешные дела юридического центра «ГиД» в Грозном. Примеры выигранных дел по недвижимости, судебным спорам, уголовным делам.">
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/js/localtailwindcss.js"></script>
     <script>
         tailwind.config = {
             theme: {
