--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <title>Контакты юристов в Грозном | Центр «ГиД»</title>
     <meta name="description" content="Контактная информация юридического центра «ГиД» в Грозном. Адрес офиса, телефоны, email, схема проезда. Запишитесь на консультацию онлайн или по телефону.">
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/js/localtailwindcss.js"></script>
     <script>
         tailwind.config = {
             theme: {
