--- a/services/index.html
+++ b/services/index.html
@@ -6,7 +6,7 @@
     <title>Юридические услуги в Грозном | Центр «ГиД»</title>
     <meta name="description" content="Полный спектр юридических услуг в Грозном: судебное представительство, сопровождение сделок с недвижимостью, защита по уголовным делам, подготовка документов, ипотечное сопровождение.">
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/js/localtailwindcss.js"></script>
     <script>
         tailwind.config = {
             theme: {
