--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <title>О нас | Центр юридической помощи «ГиД» в Грозном</title>
     <meta name="description" content="Центр юридической помощи «ГиД» — профессиональная команда юристов и адвокатов в Грозном. Наша миссия, ценности и опыт работы.">
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/js/localtailwindcss.js"></script>
     <script>
         tailwind.config = {
             theme: {
