--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Центр юридической помощи «ГиД» - Грозный</title>
     <meta name="description" content="Профессиональная юридическая помощь в Грозном: консультации, судебное представительство, сопровождение сделок с недвижимостью, защита по уголовным делам.">
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/assets/js/localtailwindcss.js"></script>
     <script>
         tailwind.config = {
             theme: {
