--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Центр юридической помощи «ГиД» - Грозный</title>
     <meta name="description" content="Профессиональная юридическая помощь в Грозном: консультации, судебное представительство, сопровождение сделок с недвижимостью, защита по уголовным делам.">
     <!-- Tailwind CSS -->
-    <script src="/assets/js/localtailwindcss.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         .hero-bg {
-            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('/assets/images/hero-bg-3.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -289,6 +289,6 @@
     <footer id="footer" class="bg-gray-900 text-white py-12"></footer>
 
     <!-- JavaScript -->
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
