Change and fix the breadcrumb bg image for pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -42,8 +42,8 @@
             font-weight: 700;
         }
         
-        .hero-bg {
-            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('https://images.unsplash.com/photo-1497366754035-f200968a6e72?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+        .breadcrumb-bg {
+            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('/assets/images/breadcrumb-bg.jpg');
             background-size: cover;
             background-position: center;
         }
@@ -140,7 +140,7 @@
     <header id="header" class="sticky-nav shadow-md"></header>
 
     <!-- Breadcrumb + Page Title Section -->
-    <section class="hero-bg text-white py-8 md:py-12">
+    <section class="breadcrumb-bg text-white py-8 md:py-12">
         <div class="container mx-auto px-4">
             <!-- Breadcrumb -->
             <nav class="flex mb-4" aria-label="Breadcrumb">
