--- a/about/index.html
+++ b/about/index.html
@@ -43,7 +43,7 @@
         }
         
         .hero-bg {
-            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('/assets/images/breadcrumb-bg.jpg');;
             background-size: cover;
             background-position: center;
         }
