--- a/services/index.html
+++ b/services/index.html
@@ -42,7 +42,7 @@
         }
         
         .hero-bg {
-            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('https://images.unsplash.com/photo-1589391886085-8b6b0ac72a1a?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+            background: linear-gradient(rgba(13, 59, 102, 0.85), rgba(13, 59, 102, 0.9)), url('/assets/images/breadcrumb-bg.jpg');;
             background-size: cover;
             background-position: center;
         }
