Fix all consultation links to contact/ page

--- a/about/index.html
+++ b/about/index.html
@@ -494,7 +494,7 @@
             <h2 class="text-2xl md:text-3xl font-bold mb-6">Нужна профессиональная юридическая помощь?</h2>
             <p class="text-xl mb-10 max-w-2xl mx-auto opacity-90">Запишитесь на консультацию к нашим специалистам и получите решение вашего юридического вопроса</p>
             <div class="flex flex-col sm:flex-row justify-center gap-6">
-                <a href="/consultation" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
+                <a href="/contact/" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
                     Записаться на консультацию <i class="ml-2 fas fa-calendar-check"></i>
                 </a>
                 <a href="/contact" class="bg-white text-primary px-8 py-4 rounded-lg font-bold text-lg hover:bg-gray-100 transition">
