--- a/cases/index.html
+++ b/cases/index.html
@@ -509,7 +509,7 @@
             </div>
             
             <div class="text-center mt-12">
-                <a href="/consultation" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg inline-block">
+                <a href="/contact/" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg inline-block">
                     Хочу такой же результат <i class="ml-2 fas fa-arrow-right"></i>
                 </a>
             </div>
@@ -522,7 +522,7 @@
             <h2 class="text-2xl md:text-3xl font-bold mb-6">Хотите стать нашим следующим успешным кейсом?</h2>
             <p class="text-xl mb-10 max-w-2xl mx-auto opacity-90">Оставьте заявку на консультацию, и мы поможем решить вашу юридическую проблему</p>
             <div class="flex flex-col sm:flex-row justify-center gap-6">
-                <a href="/consultation" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
+                <a href="/contact/" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
                     Записаться на консультацию <i class="ml-2 fas fa-calendar-check"></i>
                 </a>
                 <a href="tel:+79252277771" class="bg-white text-primary px-8 py-4 rounded-lg font-bold text-lg hover:bg-gray-100 transition">
