--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">Профессиональная юридическая помощь в Грозном</h1>
                 <p class="text-xl mb-10 opacity-90">Полный спектр юридических услуг — от консультаций и судебного представительства до сопровождения сделок с недвижимостью и защиты по уголовным делам. Индивидуальный подход к каждому клиенту.</p>
                 <div class="flex flex-col sm:flex-row gap-4">
-                    <a href="/consultation" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg text-center">
+                    <a href="/contact/" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg text-center">
                         Получить консультацию <i class="ml-2 fas fa-arrow-right"></i>
                     </a>
                     <a href="/services" class="bg-white text-primary px-8 py-4 rounded-lg font-bold text-lg text-center hover:bg-gray-100 transition">
@@ -219,7 +219,7 @@
             <h2 class="text-3xl md:text-4xl font-bold mb-6">Нужна юридическая помощь?</h2>
             <p class="text-xl mb-10 max-w-2xl mx-auto opacity-90">Запишитесь на бесплатную первичную консультацию к нашим специалистам. Мы проанализируем вашу ситуацию и предложим оптимальное решение.</p>
             <div class="flex flex-col sm:flex-row justify-center gap-6">
-                <a href="/consultation" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
+                <a href="/contact/" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
                     Записаться на консультацию <i class="ml-2 fas fa-calendar-check"></i>
                 </a>
                 <a href="tel:+79252277771" class="bg-white text-primary px-8 py-4 rounded-lg font-bold text-lg hover:bg-gray-100 transition">
