--- a/services/index.html
+++ b/services/index.html
@@ -439,7 +439,7 @@
                 <h3 class="text-2xl md:text-3xl font-bold mb-6">Нужна юридическая помощь?</h3>
                 <p class="text-xl mb-8 max-w-2xl mx-auto">Запишитесь на бесплатную первичную консультацию. Мы проанализируем вашу ситуацию и предложим оптимальное решение.</p>
                 <div class="flex flex-col sm:flex-row justify-center gap-6">
-                    <a href="/consultation" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
+                    <a href="/contact/" class="btn-accent px-8 py-4 rounded-lg font-bold text-lg">
                         Записаться на консультацию <i class="ml-2 fas fa-calendar-check"></i>
                     </a>
                     <a href="tel:+79252277771" class="bg-white text-primary px-8 py-4 rounded-lg font-bold text-lg hover:bg-gray-100 transition">
